@@ -1,6 +1,6 @@
 # Makefile: Build script
-# From the OpenZXRom project
-# Copyright (c) 2005-2007 Matthew Westcott
+# From the Open82 project
+# Copyright (c) 2000 Matthew Westcott
 #
 # $Id: Makefile 16 2005-12-18 16:45:24Z gasman $
 #
@@ -23,13 +23,19 @@
 # Postal address: 14 Daisy Hill Drive, Adlington, Chorley,
 #                 Lancs, PR6 9NE, United Kingdom
 
-# path to the Fuse executable
+# =====================
+# Configuration options - override these in a file named config.mk if required
+
+# Path to the Fuse <http://fuse-emulator.sourceforge.net/> executable, used by
+# 'make fuse' to start up the emulator with the ROM image installed
 FUSE=fuse
 
-# font to be used
+# Font to incorporate into the ROM. Valid options are ZX81ACE and CLAIRSYS
 FONT=ZX81ACE
 
-# if you want to override the above, do it in a file config.mk...
+# End configuration options
+# =========================
+
 -include config.mk
 
 .PHONY: fuse clean
@@ -40,13 +46,13 @@ else
   FONT_FILE=fonts/zx81_ace.asm
 endif
 
-openzxrom.bin: rom.asm restarts.asm startup.asm printing.asm keyboard.asm interpreter.asm cassette.asm clear_screen.asm errors.asm memory.asm expressions.asm functions.asm commands.asm print_string.asm graphics.asm calculator.asm diagnostics.asm splash_screen.asm $(FONT_FILE)
-	pasmo --equ FONT_$(FONT) rom.asm openzxrom.bin openzxrom.sym
+open82.bin: rom.asm restarts.asm startup.asm printing.asm keyboard.asm interpreter.asm cassette.asm clear_screen.asm errors.asm memory.asm expressions.asm functions.asm commands.asm print_string.asm graphics.asm calculator.asm diagnostics.asm splash_screen.asm $(FONT_FILE)
+	pasmo --equ FONT_$(FONT) rom.asm open82.bin open82.sym
 
 # build the ROM and run it in Fuse
-fuse: openzxrom.bin
-	$(FUSE) --rom-48 openzxrom.bin --machine 48 --no-traps
+fuse: open82.bin
+	$(FUSE) --rom-48 open82.bin --machine 48 --no-traps
 
 clean:
-	rm -f openzxrom.bin openzxrom.sym
+	rm -f open82.bin open82.sym
 
