@@ -1,6 +1,6 @@
 ; commands.asm: Implementation of BASIC commands
-; From the OpenZXRom project
-; Copyright (c) 2005-2008 Matthew Westcott
+; From the Open82 project
+; Copyright (c) 2009 Matthew Westcott
 ;
 ; $Id$
 ;
