@@ -1,6 +1,6 @@
 ; expressions.asm: parsing and evaluation of numeric and string expressions
-; From the OpenZXRom project
-; Copyright (c) 2005-2007 Matthew Westcott
+; From the Open82 project
+; Copyright (c) 2009 Matthew Westcott
 ;
 ; $Id$
 ;
