@@ -1,6 +1,6 @@
 ; graphics.asm: High-resolution graphics routines
-; From the OpenZXRom project
-; Copyright (c) 2005-2007 Matthew Westcott
+; From the Open82 project
+; Copyright (c) 2009 Matthew Westcott, Rui Tunes
 ;
 ; $Id$
 ;
