@@ -1,6 +1,6 @@
 ; memory.asm: Memory management routines
-; From the OpenZXRom project
-; Copyright (c) 2007-2008 Matthew Westcott
+; From the Open82 project
+; Copyright (c) 2008 Matthew Westcott
 ;
 ; $Id$
 ;
