@@ -1,6 +1,6 @@
 ; print_string.asm: print a string to the screen
-; From the OpenZXRom project
-; Copyright (c) 2005-2008 Matthew Westcott
+; From the Open82 project
+; Copyright (c) 2008 Matthew Westcott
 ;
 ; $Id$
 ;
