@@ -1,6 +1,6 @@
 ; startup.asm: actions to perform on system startup
-; From the OpenZXRom project
-; Copyright (c) 2005-2008 Matthew Westcott
+; From the Open82 project
+; Copyright (c) 2009 Matthew Westcott
 ;
 ; $Id$
 ;
